--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
