--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "install": "^0.13.0",
     "npm": "^11.4.0",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
